--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -8,8 +8,10 @@
     <string name="immediate_alert">faire sonner le porte-clé</string>
     <string name="link_background">lien permanent</string>
     <string name="stop_ring">arrêter la sonnerie</string>
-    <string name="button_action">bouton sur le porte-clé</string>
-    <string name="button_action_summary">quelle est l\'action associée ?</string>
+    <string name="simple_button_action">simple clic sur le porte-clé</string>
+    <string name="simple_button_action_summary">quelle est l\'action associée ?</string>
+    <string name="double_button_action">double clic sur le porte-clé</string>
+    <string name="double_button_action_summary">quelle est l\'action associée ?</string>
     <string name="link_background_summary">lien entre le porte-clé et le smartphone</string>
     <string name="battery_info">niveau de batterie</string>
     <string name="immediate_alert_summary">cliquer ici pour faire sonner le porte-clé</string>
