--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">iTracing2</string>
     <string name="ble_not_supported">désolé, votre matériel ne supporte pas le Bluetooth LE</string>
     <string name="action_scan_start">detection</string>
-    <string name="beacon_not_found">porte-clé iSee non trouvé</string>
+    <string name="beacon_not_found">porte-clé non trouvé</string>
     <string name="action_connect">connexion</string>
     <string name="immediate_alert">faire sonner le porte-clé</string>
     <string name="link_background">lien permanent</string>
@@ -23,6 +23,10 @@
     <string name="donate_summary">pour m\'aider dans mon travail :)</string>
     <string name="feedback_summary">votre aide est la bienvenue</string>
     <string name="display_last_position">afficher la dernière position enregistrée</string>
+    <string name="out_of_band_action">perte de la liaison entre les appareils</string>
+    <string name="out_of_band_action_summary">quelle est l\'action associée ?</string>
+    <string name="action_on_power_off">perte de liaison à l\'extinction</string>
+    <string name="action_on_power_off_summary">perte de liaison si porte-clé ou bluetooth s\'éteint</string>
     <string-array name="button_actions">
         <item>aucune</item>
         <item>faire sonner le téléphone</item>
