--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,8 @@
     <string name="out_of_band_action_summary">what is the action ?</string>
     <string name="action_on_power_off">link is lost on power off</string>
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
+    <string name="ring_tone_summary">select the ringtone referred to action</string>
+    <string name="ring_tone">ring tone</string>
     <string-array name="button_actions">
         <item>nothing</item>
         <item>ring the phone</item>
