--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -3,21 +3,21 @@
     <string name="app_name">iTracing2</string>
     <string name="ble_not_supported">désolé, votre matériel ne supporte pas le Bluetooth LE</string>
     <string name="action_scan_start">detection</string>
-    <string name="beacon_not_found">porte-clé non trouvé</string>
+    <string name="beacon_not_found">porte-clés non trouvé</string>
     <string name="action_connect">connexion</string>
-    <string name="immediate_alert">faire sonner le porte-clé</string>
+    <string name="immediate_alert">faire sonner le porte-clés</string>
     <string name="link_background">lien permanent</string>
     <string name="stop_ring">arrêter la sonnerie</string>
-    <string name="simple_button_action">simple clic sur le porte-clé</string>
+    <string name="simple_button_action">simple clic sur le porte-clés</string>
     <string name="simple_button_action_summary">quelle est l\'action associée ?</string>
-    <string name="double_button_action">double clic sur le porte-clé</string>
+    <string name="double_button_action">double clic sur le porte-clés</string>
     <string name="double_button_action_summary">quelle est l\'action associée ?</string>
-    <string name="link_background_summary">lien entre le porte-clé et le smartphone</string>
+    <string name="link_background_summary">lien entre le porte-clés et le smartphone</string>
     <string name="battery_info">niveau de batterie</string>
-    <string name="immediate_alert_summary">cliquer ici pour faire sonner le porte-clé</string>
+    <string name="immediate_alert_summary">cliquer ici pour faire sonner le porte-clés</string>
     <string name="welcome_text">Bienvenu iTracing2.\n\nCette application permet de communiquer avec votre appareil iSee (Quintic PROXR).\n
         Si comme moi, l\'application "iTracing" vous dérange, libre à vous d\'utiliser ma version :)\n\n
-        Cliquer sur DETECTION pour trouver votre porte-clé iSee (il doit se nommer \"Quintic PROXR\").</string>
+        Cliquer sur DETECTION pour trouver votre porte-clés iSee (il doit se nommer \"Quintic PROXR\").</string>
     <string name="donate">faire un don (PayPal)</string>
     <string name="feedback">retour d\'expérience</string>
     <string name="donate_summary">pour m\'aider dans mon travail :)</string>
@@ -26,9 +26,11 @@
     <string name="out_of_band_action">perte de la liaison entre les appareils</string>
     <string name="out_of_band_action_summary">quelle est l\'action associée ?</string>
     <string name="action_on_power_off">perte de liaison à l\'extinction</string>
-    <string name="action_on_power_off_summary">perte de liaison si porte-clé ou bluetooth s\'éteint</string>
+    <string name="action_on_power_off_summary">perte de liaison si porte-clés ou le bluetooth s\'éteint</string>
     <string name="ring_tone_summary">sélectionner la sonnerie en rapport aux actions</string>
     <string name="ring_tone">sonnerie</string>
+    <string name="rssi_info">qualité du signal</string>
+    <string name="actions">action depuis le porte-clés</string>
     <string-array name="button_actions">
         <item>aucune</item>
         <item>faire sonner le téléphone</item>
