--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
     <string name="ring_tone_summary">select the ringtone referred to action</string>
     <string name="ring_tone">ring tone</string>
+    <string name="rssi_info">rssi info</string>
+    <string name="actions">keyring\'s actions</string>
     <string-array name="button_actions">
         <item>nothing</item>
         <item>ring the phone</item>
