fix a bug with ringtone not found

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -32,6 +32,7 @@
     <string name="rssi_info">qualité du signal</string>
     <string name="actions">action depuis le porte-clés</string>
     <string name="select_device">sélectionner un appareil</string>
+    <string name="ring_tone_not_found">sonnerie non trouvée, s\'il vous plait, sélectionnez-en une autre</string>
     <string-array name="button_actions">
         <item>aucune</item>
         <item>faire sonner le téléphone</item>
