--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="rssi_info">rssi info</string>
     <string name="actions">keyring\'s actions</string>
     <string name="select_device">select a device</string>
+    <string name="ring_tone_not_found">ring tone not found! please select an another, be sure you have a default ring tone, or that sound volume is up.</string>
     <string-array name="button_actions">
         <item>nothing</item>
         <item>ring the phone</item>
