--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,10 @@
     <string name="immediate_alert_summary">click here to alert the keyring</string>
     <string name="welcome_text">Welcome on iTracing2.\n\nThis application allows you to communicate with your iSee (Quintic PROXR) bluetooth device.\n
         If like me, the poorest application "iTracing" disturbs you, enjoy to use my own version :)\n\n
-        Please click on the DETECT button to find you iSee device (it must be named "Quintic PROXR").</string>
+        Please click on the DETECT button to find you iSee device (it should be named "Quintic PROXR").\n\n
+        If nothing is detected, a box appears containing all detected compatibles devices.\n
+        If this box is empty, you should reboot your iTag (because is a cheap device) and retry.\n\n
+        Keep in mind that i develop iTracing2 only on my free time ;-)</string>
     <string name="donate">donate (PayPal)</string>
     <string name="feedback">feedback</string>
     <string name="donate_summary">to support my work :)</string>
