--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -35,6 +35,7 @@
     <string name="select_device">sélectionner un appareil</string>
     <string name="ring_tone_not_found">sonnerie non trouvée, s\'il vous plait, sélectionnez-en une autre</string>
     <string name="vibrator_not_found">vibrateur non trouvé! assurez-vous que vous disposez de cette fonctionnalité sur votre téléphone.</string>
+    <string name="something_goes_wrong">quelque chose n\'a pas fonctionné comme prévu!</string>
     <string-array name="button_actions">
         <item>aucune</item>
         <item>faire sonner le téléphone</item>
