--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,14 +5,14 @@
     <string name="action_scan_start">detect</string>
     <string name="beacon_not_found">keyring not found</string>
     <string name="action_connect">connect</string>
-    <string name="start_immediate_alert">start ring the keyring</string>
-    <string name="stop_immediate_alert">stop ring the keyring</string>
+    <string name="start_immediate_alert">start ringing the keyring</string>
+    <string name="stop_immediate_alert">stop ringing the keyring</string>
     <string name="link_background">link background</string>
     <string name="stop_ring">stop ring</string>
     <string name="stop_vibrate">stop vibration</string>
-    <string name="simple_button_action">simple click button action</string>
+    <string name="simple_button_action">simple button click</string>
     <string name="simple_button_action_summary">what is the button action ?</string>
-    <string name="double_button_action">double click button action</string>
+    <string name="double_button_action">double button click</string>
     <string name="double_button_action_summary">what is the button action ?</string>
     <string name="link_background_summary">loss link between device and keyring</string>
     <string name="battery_info">battery info</string>
@@ -29,14 +29,14 @@
     <string name="donate_summary">to support my work :)</string>
     <string name="feedback_summary">feel free to improve this product</string>
     <string name="display_last_position">display the last recorded position</string>
-    <string name="out_of_band_action">out of band action</string>
+    <string name="out_of_band_action">out of range action</string>
     <string name="out_of_band_action_summary">what is the action ?</string>
     <string name="action_on_power_off">link is lost on power off</string>
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
-    <string name="ring_tone_summary">select the ringtone referred to action</string>
+    <string name="ring_tone_summary">select the ringtone for actions</string>
     <string name="ring_tone">ring tone</string>
     <string name="rssi_info">rssi info</string>
-    <string name="actions">keyring\'s actions</string>
+    <string name="actions">keyring actions</string>
     <string name="select_device">select a device</string>
     <string name="ring_tone_not_found">ring tone not found! please select an another, be sure you have a default ring tone, or that sound volume is up.</string>
     <string name="vibrator_not_found">vibrator not found! please be sure that you have this feature on your phone.</string>
