--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="immediate_alert_summary">click here to alert the keyring</string>
     <string name="welcome_text">Welcome on iTracing2.\n\nThis application allows you to communicate with your iSee (Quintic PROXR) bluetooth device.\n
         If like me, the poorest application "iTracing" disturbs you, enjoy to use my own version :)\n\n
-        Please click on the DETECT button to find you iSee device (it should be named "Quintic PROXR").\n\n
+        Please click on the magnifying glass button to find you iSee device (it should be named "Quintic PROXR").\n\n
         If nothing is detected, a box appears containing all detected compatibles devices.\n
         If this box is empty, you should reboot your iTag (because is a cheap device) and retry.\n\n
         Note that loss link and iTag button feature are available only with "background link" option.\n\n
@@ -47,7 +47,6 @@
     <string name="custom_action">custom action</string>
     <string name="custom_action_summary">http(s)://.. or intent action string</string>
     <string name="remove">remove the keyring</string>
-    <string name="remove_summary">remove the keyring from this device</string>
     <string name="confirm_remove_keyring">Confirm to remove this keyring</string>
     <string-array name="button_actions">
         <item>nothing</item>
