--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="custom_action_summary">http(s)://.. or intent action string</string>
     <string name="remove">remove the keyring</string>
     <string name="confirm_remove_keyring">Confirm to remove this keyring</string>
+    <string name="confirm_change_name">Confirm to change the keyring name</string>
     <string-array name="button_actions">
         <item>nothing</item>
         <item>ring the phone</item>
