--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,14 +7,14 @@
     <string name="action_connect">connexion</string>
     <string name="start_immediate_alert">faire sonner le porte-clés</string>
     <string name="stop_immediate_alert">arrêter la sonnerie du porte-clés</string>
-    <string name="link_background">lien permanent</string>
+    <string name="link_background">toujours actif</string>
     <string name="stop_ring">arrêter la sonnerie</string>
     <string name="stop_vibrate">arrêter la vibration</string>
     <string name="simple_button_action">simple clic sur le porte-clés</string>
     <string name="simple_button_action_summary">quelle est l\'action associée ?</string>
     <string name="double_button_action">double clic sur le porte-clés</string>
     <string name="double_button_action_summary">quelle est l\'action associée ?</string>
-    <string name="link_background_summary">lien entre le porte-clés et le smartphone</string>
+    <string name="link_background_summary">permet d\'activer des options supplémentaires</string>
     <string name="battery_info">niveau de batterie</string>
     <string name="immediate_alert_summary">cliquer ici pour faire sonner le porte-clés</string>
     <string name="welcome_text">Bienvenue sur iTracing2.\n\nCette application permet de communiquer avec vos appareils bluetooth iSee (Quintic PROXR).\n
