--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,12 +54,14 @@
     <string name="preferences">preferences</string>
     <string name="action_foreground_summary">improves the link between the smartphone and the devices</string>
     <string name="action_foreground">foreground mode</string>
+    <string name="ring_the_device">ring the keyring</string>
     <string-array name="button_actions">
         <item>nothing</item>
         <item>ring the phone</item>
         <item>vibrate the phone</item>
         <item>capture my position</item>
         <item>call a url or broadcast intent action</item>
+        <item>broadcast an intent</item>
     </string-array>
     <string-array name="button_actions_values">
         <item>NOTHING</item>
@@ -67,5 +69,6 @@
         <item>VIBRATE_PHONE</item>
         <item>CAPTURE_POSITION</item>
         <item>CUSTOM_ACTION</item>
+        <item>BROADCAST_INTENT</item>
     </string-array>
 </resources>
