--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="link_loss_disabled">disable this feature may occurs ringing your key ring</string>
     <string name="foreground_started">started in foreground mode</string>
     <string name="preferences">preferences</string>
+    <string name="dashboard">dashboard</string>
     <string name="action_foreground_summary">improves the link between the smartphone and the devices</string>
     <string name="action_foreground">foreground mode</string>
     <string name="ring_the_device">ring the keyring</string>
