--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name">iTracing2</string>
     <string name="ble_not_supported">извините Bluetooth LE не поддерживается на вашем устройстве</string>
     <string name="action_scan_start">обнаружить</string>
-    <string name="beacon_not_found">​​брелок не найден</string>
+    <string name="beacon_not_found">брелок не найден</string>
     <string name="action_connect">подключить</string>
     <string name="start_immediate_alert">начать звон брелок</string>
     <string name="stop_immediate_alert">остановить звон брелок</string>
@@ -38,7 +38,7 @@
     <string name="rssi_info">RSSI Информация</string>
     <string name="actions">Брелок действия</string>
     <string name="select_device">выберите устройство</string>
-    <string name="ring_tone_not_found">​​кольцо тон не найден! Пожалуйста, выберите другое, убедитесь, что у вас есть кольцо по умолчанию тон линии, либо, что громкость звука вверх.</string>
+    <string name="ring_tone_not_found">кольцо тон не найден! Пожалуйста, выберите другое, убедитесь, что у вас есть кольцо по умолчанию тон линии, либо, что громкость звука вверх.</string>
     <string name="vibrator_not_found">вибратор не найден! пожалуйста, убедитесь, что у вас есть эта функция на вашем телефоне.</string>
     <string name="something_goes_wrong">что-то идет не так!</string>
     <string name="double_button_delay">Дважды нажмите задержка</string>
@@ -52,6 +52,7 @@
     <string name="link_loss_disabled">отключить эту функцию может происходит звон свой брелок</string>
     <string name="foreground_started">запущен в режиме переднего плана</string>
     <string name="preferences">предпочтения</string>
+    <string name="dashboard">панель приборов</string>
     <string name="action_foreground_summary">улучшает связь между смартфоном и устройств</string>
     <string name="action_foreground">Режим план</string>
     <string name="ring_the_device">кольцо в связку ключей</string>
