--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,68 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">iTracing2</string>
-    <string name="ble_not_supported">извините Bluetooth LE не поддерживается на вашем устройстве</string>
-    <string name="action_scan_start">обнаружить</string>
-    <string name="beacon_not_found">брелок не найден</string>
-    <string name="action_connect">подключить</string>
-    <string name="start_immediate_alert">начать звон брелок</string>
-    <string name="stop_immediate_alert">остановить звон брелок</string>
-    <string name="link_background">ВСЕГДА-на</string>
-    <string name="stop_ring">стопорное кольцо</string>
-    <string name="stop_vibrate">остановить вибрацию</string>
-    <string name="simple_button_action">просто нажмите варианты</string>
-    <string name="simple_button_action_summary">Что означает кнопка действия?</string>
-    <string name="double_button_action">дважды нажмите варианты</string>
-    <string name="double_button_action_summary">Что означает кнопка действия?</string>
-    <string name="link_background_summary">позволяет активировать больше возможностей</string>
-    <string name="battery_info">Информация батарея</string>
-    <string name="immediate_alert_summary">нажмите здесь, чтобы предупредить связку ключей</string>
-    <string name="welcome_text">Добро пожаловать на iTracing2.\n\nЭто приложение позволяет вам общаться с вашим ISEE (Quintic ProXR) Bluetooth устройства.\n
-                Если, как я, беднейших приложение "iTracing" Вас беспокоит, наслаждаться использовать свой собственный вариант:) \n\n
-                Пожалуйста, нажмите на кнопку увеличительное стекло, чтобы найти вас ISEE устройство (это должно быть названо "Quintic ProXR"). \n\n
-                Если ничего не обнаружено, появляется окно, содержащее все обнаруженные совместимых устройств. \n
-                Если это окно пустое, вы должны перезагрузить ITAG (потому что это дешевое устройство) и повторите попытку. \n\n
-                Обратите внимание, что ссылка потери и особенность кнопку ITAG доступны только с опцией "фон" ссылка. \n\n
-                Имейте в виду, что я развивать iTracing2 только на мое свободное время ;-)</string>
-    <string name="donate">пожертвовать (PayPal)</string>
-    <string name="feedback">обратной связи</string>
-    <string name="donate_summary">чтобы поддержать мою работу :)</string>
-    <string name="feedback_summary">не стесняйтесь, чтобы улучшить этот продукт</string>
-    <string name="display_last_position">отобразить последнюю записанную позицию</string>
-    <string name="out_of_band_action">вне диапазона действия</string>
-    <string name="out_of_band_action_summary">что это действие?</string>
-    <string name="action_on_power_off">связь потеряна на мощности от</string>
-    <string name="action_on_power_off_summary">ссылка теряется, если брелок или Bluetooth является выключения</string>
-    <string name="ring_tone_summary">выберите мелодию для действий</string>
-    <string name="ring_tone">кольцо тон</string>
-    <string name="rssi_info">RSSI Информация</string>
-    <string name="actions">Брелок действия</string>
+    <string name="ble_not_supported">Извините, bluetooth LE не поддерживается на вашем устройстве</string>
+    <string name="action_scan_start">Определение</string>
+    <string name="beacon_not_found">Устройства не найдены</string>
+    <string name="action_connect">Соединение</string>
+    <string name="start_immediate_alert">Включить тревогу на брелке</string>
+    <string name="stop_immediate_alert">Выключить тревогу на брелке</string>
+    <string name="link_background">всегда включён</string>
+    <string name="stop_ring">Остановить тревогу</string>
+    <string name="stop_vibrate">Остановить вибрацию</string>
+    <string name="simple_button_action">Функции при одиночном нажатии</string>
+    <string name="simple_button_action_summary">Выберите действие кнопки для одиночного нажатия</string>
+    <string name="double_button_action">Функции при двойном нажатии</string>
+    <string name="double_button_action_summary">Выберите действие кнопки при двойном нажатии</string>
+    <string name="link_background_summary">Включить дополнительные возможности</string>
+    <string name="battery_info">Информация о батарее</string>
+    <string name="immediate_alert_summary">нажмите для активации тревоги на брелке</string>
+    <string name="welcome_text">Добро пожаловать в iTracing2.\n\nЭто приложение поможет Вам соеденить с телефоном брелок iSee (Quintic PROXR) по bluetooth.\n
+        Если у Вас есть брелок Bluetooth LE , то программа &quot;iTracing&quot; поможет комфортно им пользоваться:)\n\n
+        Пожалуйста, нажмите на кнопку брелка, чтобы найти ваше ISEE устройство (его название должно быть "Quintic ProXR").\n\n
+        Если брелок обнаружен, появится окно, содержащее информацию о совместимых устройствах.\n
+        Если это окно пустое, попробуйте перезагрузить ITAG и телефон и повторите попытку.\n\n
+        Если связь брелка и телефона неустойчивая и теряется, включите в меню настроек (фоновая связь).\n\n
+        Я работаю над программой iTracing2 только в своё свободное время ;-)</string>
+    <string name="donate">Благодарность автору(PayPal)</string>
+    <string name="feedback">Обратная связь</string>
+    <string name="donate_summary">для поддержки моей работы:)</string>
+    <string name="feedback_summary">не стесняйтесь, это ускорит выход новых версий.Спасибо!</string>
+    <string name="display_last_position">Показать последнюю записанную точку</string>
+    <string name="out_of_band_action">Потеря брелка</string>
+    <string name="out_of_band_action_summary">Какое действие выполнить при потере связи с брелком?</string>
+    <string name="action_on_power_off">Отключение Bluetooth</string>
+    <string name="action_on_power_off_summary">Отключить Bluetooth при разыве связи с брелком</string>
+    <string name="ring_tone_summary">Выберите мелодию для озвучивания действий</string>
+    <string name="ring_tone">Мелодия</string>
+    <string name="rssi_info">RSS информация</string>
+    <string name="actions">Действия брелка</string>
     <string name="select_device">выберите устройство</string>
-    <string name="ring_tone_not_found">кольцо тон не найден! Пожалуйста, выберите другое, убедитесь, что у вас есть кольцо по умолчанию тон линии, либо, что громкость звука вверх.</string>
-    <string name="vibrator_not_found">вибратор не найден! пожалуйста, убедитесь, что у вас есть эта функция на вашем телефоне.</string>
-    <string name="something_goes_wrong">что-то идет не так!</string>
-    <string name="double_button_delay">Дважды нажмите задержка</string>
-    <string name="double_button_delay_summary">задержки между двумя щелчками (300 мс если пусто)</string>
+    <string name="ring_tone_not_found">​мелодия не найдена! Пожалуйста, выберите другую, либо убедитесь, что у вас есть мелодия установленная по умолчанию, либо, что громкость звука добавлена.</string>
+    <string name="vibrator_not_found">виброрежим не найден! пожалуйста, убедитесь, что есть эта функция виброрежима в вашем телефоне.</string>
+    <string name="something_goes_wrong">что-то пошло не так!</string>
+    <string name="double_button_delay">Задержка двойного нажатия</string>
+    <string name="double_button_delay_summary">Задержка между двумя нажатиями (300 мс если пусто)</string>
     <string name="default_double_button_delay">300</string>
-    <string name="custom_action">пользовательских действий</string>
-    <string name="custom_action_summary">http(s)://.. или намерение строка действия</string>
-    <string name="remove">удалить связку ключей</string>
-    <string name="confirm_remove_keyring">Подтвердите удалить эту связку</string>
-    <string name="confirm_change_name">Подтвердите, чтобы изменить имя связки ключей</string>
-    <string name="link_loss_disabled">отключить эту функцию может происходит звон свой брелок</string>
-    <string name="foreground_started">запущен в режиме переднего плана</string>
-    <string name="preferences">предпочтения</string>
-    <string name="dashboard">панель приборов</string>
-    <string name="action_foreground_summary">улучшает связь между смартфоном и устройств</string>
-    <string name="action_foreground">Режим план</string>
-    <string name="ring_the_device">кольцо в связку ключей</string>
+    <string name="custom_action">Пользовательские команды</string>
+    <string name="custom_action_summary">Открытие http(s)://.. или другое действие</string>
+    <string name="remove">Удалить брелок</string>
+    <string name="confirm_remove_keyring">Подтвердите удаление брелка</string>
+    <string name="confirm_change_name">Подтвердите смену имени брелка</string>
+    <string name="link_loss_disabled">Отключено слежение за брелком</string>
+    <string name="foreground_started">Включить фоновый режим</string>
+    <string name="preferences">Настройки</string>
+    <string name="dashboard">Статус</string>
+    <string name="action_foreground_summary">Улучшает связь между смартфоном и устройством</string>
+    <string name="action_foreground">фоновый режим</string>
+    <string name="ring_the_device">Включить звонок на брелке</string>
     <string-array name="button_actions">
         <item>ничего</item>
-        <item>кольцо телефон</item>
-        <item>вибрировать телефон</item>
-        <item>захватить мое положение</item>
-        <item>вызвать URL или трансляции намерения действий</item>
-        <item>вещания умысел</item>
+        <item>звонок в телефоне</item>
+        <item>вибрация в телефоне</item>
+        <item>сохранить мою позицию</item>
+        <item>открыть URL или другое действие</item>
+        <item>назначить действие</item>
     </string-array>
     <string-array name="button_actions_values">
         <item>NOTHING</item>
