--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -53,7 +53,6 @@
     <string name="action_foreground">service en premier plan</string>
     <string name="ring_the_device">sonner le trousseau de clés</string>
     <string-array name="button_actions">
-        <item>aucune</item>
         <item>faire sonner le téléphone</item>
         <item>faire vibrer le téléphone</item>
         <item>capturer ma position</item>
@@ -61,11 +60,11 @@
         <item>envoyer un message technique</item>
     </string-array>
     <string-array name="button_actions_values">
-        <item>NOTHING</item>
         <item>RING_PHONE</item>
         <item>VIBRATE_PHONE</item>
         <item>CAPTURE_POSITION</item>
         <item>CUSTOM_ACTION</item>
         <item>BROADCAST_INTENT</item>
     </string-array>
+    <string-array name="empty_array"/>
 </resources>
