--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -57,7 +57,6 @@
     <string name="action_foreground">фоновый режим</string>
     <string name="ring_the_device">Включить звонок на брелке</string>
     <string-array name="button_actions">
-        <item>ничего</item>
         <item>звонок в телефоне</item>
         <item>вибрация в телефоне</item>
         <item>сохранить мою позицию</item>
@@ -65,11 +64,11 @@
         <item>назначить действие</item>
     </string-array>
     <string-array name="button_actions_values">
-        <item>NOTHING</item>
         <item>RING_PHONE</item>
         <item>VIBRATE_PHONE</item>
         <item>CAPTURE_POSITION</item>
         <item>CUSTOM_ACTION</item>
         <item>BROADCAST_INTENT</item>
     </string-array>
+    <string-array name="empty_array"/>
 </resources>
