--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -29,8 +29,8 @@
     <string name="donate_summary">для поддержки моей работы:)</string>
     <string name="feedback_summary">не стесняйтесь, это ускорит выход новых версий.Спасибо!</string>
     <string name="display_last_position">Показать последнюю записанную точку</string>
-    <string name="out_of_band_action">Потеря брелка</string>
-    <string name="out_of_band_action_summary">Какое действие выполнить при потере связи с брелком?</string>
+    <string name="out_of_range_action">Потеря брелка</string>
+    <string name="out_of_range_action_summary">Какое действие выполнить при потере связи с брелком?</string>
     <string name="action_on_power_off">Отключение Bluetooth</string>
     <string name="action_on_power_off_summary">Отключить Bluetooth при разыве связи с брелком</string>
     <string name="ring_tone_summary">Выберите мелодию для озвучивания действий</string>
