--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,8 +29,8 @@
     <string name="donate_summary">to support my work :)</string>
     <string name="feedback_summary">feel free to improve this product</string>
     <string name="display_last_position">display the last recorded position</string>
-    <string name="out_of_band_action">out of range action</string>
-    <string name="out_of_band_action_summary">what is the action ?</string>
+    <string name="out_of_range_action">out of range action</string>
+    <string name="out_of_range_action_summary">what is the action ?</string>
     <string name="action_on_power_off">link is lost on power off</string>
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
     <string name="ring_tone_summary">select the ringtone for actions</string>
