--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -56,6 +56,7 @@
     <string name="action_foreground_summary">Улучшает связь между смартфоном и устройством</string>
     <string name="action_foreground">фоновый режим</string>
     <string name="ring_the_device">Включить звонок на брелке</string>
+    <string name="events_history">История событий</string>
     <string-array name="button_actions">
         <item>звонок в телефоне</item>
         <item>вибрация в телефоне</item>
