--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="action_foreground_summary">improves the link between the smartphone and the devices</string>
     <string name="action_foreground">foreground mode</string>
     <string name="ring_the_device">ring the keyring</string>
+    <string name="events_history">events history</string>
     <string-array name="button_actions">
         <item>start ring the phone</item>
         <item>start vibrate the phone</item>
