--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -53,6 +53,11 @@
     <string name="action_foreground">service en premier plan</string>
     <string name="ring_the_device">sonner le trousseau de clés</string>
     <string name="events_history">historique</string>
+    <string name="connected_action">action à la connexion</string>
+    <string name="connected_action_summary">action déclenchée lorsque la connexion se produit</string>
+    <string name="clear_events">supprimer tous les événements</string>
+    <string name="confirm_remove_events">Confirmer la suppression des événements</string>
+    <string name="export_events">exporter les événements</string>
     <string-array name="button_actions">
         <item>faire sonner le téléphone</item>
         <item>faire vibrer le téléphone</item>
