--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="feedback_summary">feel free to improve this product</string>
     <string name="display_last_position">display the last recorded position</string>
     <string name="out_of_range_action">out of range action</string>
-    <string name="out_of_range_action_summary">what is the action ?</string>
+    <string name="out_of_range_action_summary">triggered when disconnection occurs</string>
     <string name="action_on_power_off">link is lost on power off</string>
     <string name="action_on_power_off_summary">the link is lost if keyring or bluetooth is powering off</string>
     <string name="ring_tone_summary">select the ringtone for actions</string>
@@ -57,6 +57,11 @@
     <string name="action_foreground">foreground mode</string>
     <string name="ring_the_device">ring the keyring</string>
     <string name="events_history">events history</string>
+    <string name="connected_action">on connected action</string>
+    <string name="connected_action_summary">triggered when connection occurs</string>
+    <string name="clear_events">clear all events</string>
+    <string name="confirm_remove_events">Confirm events deletion</string>
+    <string name="export_events">export the events</string>
     <string-array name="button_actions">
         <item>start ring the phone</item>
         <item>start vibrate the phone</item>
