--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -1,11 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">iTracing2</string>
+    <string name="welcome_text">Üdvözöl az iTracing2 !\n
+        \n
+        Ezzel az alkalmazással kapcsolódni tudsz az iSee (Quintic PROXR) bluetooth-os kulcstartós közelség-érzékelőkhöz és
+        hasonló kínai másolatokhoz.\n
+        Ha, hozzám hasonlóan, zavar az iTracing app minősége, használd megelégedéssel az alkalmazásom.\n
+        \n
+        Kezdésnek nyomj a nagyító ikonra az eszközök kereséséhez, melyek neve általában "Quintic PROXR" vagy
+        kínai másolatok esetében "iTag" szokott lenni.\n
+        Ha nem talált semmit, próbáld újraindítani az eszközöd az elem kivételével, behelyezésével.\n
+        \n
+        Egyes tevékenységek csak a folyamatos kapcsolat engedélyezése esetén elérhetőek, mint például a gombnyomás és
+        az elhagyás-ellenőrzés.\n
+        \n
+        Az alkalmazást szabadidőmben fejlesztem, forráskódja nyitott, adományokat szívesen fogadok. Köszönöm!</string>
     <string name="ble_not_supported">Készüléked nem tudja kezelni a Bluetooth Low Energy (BLE) szabványt, ez legtöbbször hardveres korlátozás, amin nem tud szoftverfrissítés segíteni.</string>
     <string name="action_scan_start">Keresés</string>
     <string name="beacon_not_found">Nem található eszköz.</string>
     <string name="action_connect">Kapcsolódás</string>
+    <string name="battery_info">Elem töltöttsége</string>
     <string name="start_immediate_alert">Megcsipogtatás</string>
+    <string name="immediate_alert_summary">Itt meg tudod csipogtatni az eszközt, hogy kipróbáld a kapcsolat működik-e.</string>
     <string name="stop_immediate_alert">Csipogtatás állj</string>
     <string name="link_background">allways-on</string>
     <string name="stop_ring">Csörgés állj</string>
@@ -15,15 +31,6 @@
     <string name="double_button_action">Dupla klikk</string>
     <string name="double_button_action_summary">Ha az eszközön kétszer egymás után megnyomod a gombot, mi történjen?</string>
     <string name="link_background_summary">allows to activate more options</string>
-    <string name="battery_info">Elem töltöttsége</string>
-    <string name="immediate_alert_summary">click here to alert the keyring</string>
-    <string name="welcome_text">Welcome on iTracing2.\n\nThis application allows you to communicate with your iSee (Quintic PROXR) bluetooth device.\n
-        If like me, the poorest application "iTracing" disturbs you, enjoy to use my own version :)\n\n
-        Please click on the magnifying glass button to find you iSee device (it should be named "Quintic PROXR").\n\n
-        If nothing is detected, a box appears containing all detected compatibles devices.\n
-        If this box is empty, you should reboot your iTag (because is a cheap device) and retry.\n\n
-        Note that loss link and iTag button feature are available only with "background link" option.\n\n
-        Keep in mind that i develop iTracing2 only on my free time ;-)</string>
     <string name="donate">donate (PayPal)</string>
     <string name="feedback">feedback</string>
     <string name="donate_summary">to support my work :)</string>
